--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
           npm run build
           pm2 restart frontend # Перезапуск фронтенда (укажите правильное имя процесса PM2)
 
-          cd pluginexpert/backend # Перейти в папку бэкенда на сервере
+          cd pluginexpert/backend_strapi # Перейти в папку бэкенда на сервере
           git pull origin main
           npm ci
           npm run build # Если Strapi требует сборки (например, для админки)
