--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,10 +6,12 @@ on:
       - main
     paths:
       - 'backend_strapi/**'
+      - 'frontend/**'
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
     # 1. Клонируем репозиторий
     - name: Checkout repository
@@ -19,37 +21,45 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: 'v22.12.0' # Используйте подходящую версию Node.js для вашего приложения
+        node-version: '20' # Используем актуальную LTS-версию Node.js
 
-    # 3. Установка зависимостей для frontend
+    # 3. Установка зависимостей и сборка frontend
     - name: Install frontend dependencies
       run: npm install
-      working-directory: ./frontend # Указываем путь к папке frontend, где находится package.json
+      working-directory: ./frontend
 
-    # 4. Сборка фронтенда
     - name: Build frontend
       run: npm run build
-      working-directory: ./frontend 
-      
+      working-directory: ./frontend
+
+    # 4. Архивируем собранный frontend
+    - name: Archive frontend build
+      run: tar -czf frontend-build.tar.gz -C ./frontend/build .
+
+    # 5. Проверка изменений в backend (если требуется оставить)
     - name: Check for backend changes
       id: backend_changes
       run: |
-        # Проверяем изменения в папке backend_strapi
         if git diff --quiet HEAD~1 HEAD -- backend_strapi; then
           echo "no_changes=true" >> $GITHUB_ENV
         else
           echo "no_changes=false" >> $GITHUB_ENV
         fi
 
-    # 5. Установка зависимостей и сборка backend (только если были изменения)
+    # 6. Установка зависимостей и сборка backend
     - name: Install backend dependencies and build
       if: env.no_changes == 'false'
       run: |
         npm install
         npm run build
       working-directory: ./backend_strapi
-      
-    # 6. Деплой на сервер
+
+    # 7. Архивируем backend для передачи на сервер
+    - name: Archive backend build
+      if: env.no_changes == 'false'
+      run: tar -czf backend-build.tar.gz -C ./backend_strapi .
+
+    # 8. Деплой на сервер
     - name: Deploy to server
       uses: appleboy/ssh-action@master
       with:
@@ -58,14 +68,41 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: ${{ secrets.PORT }}
         script: |
-          cd frontend 
-          git pull origin main
-          npm ci
-          npm run build
-          pm2 restart 6 
+          # Переходим в директорию проекта
+          cd /path/to/project
 
-          cd backend_strapi
-          git pull origin main
-          npm ci
-          npm run build 
-          pm2 restart 5 
+          # Распаковываем frontend
+          if [ -f ~/frontend-build.tar.gz ]; then
+            rm -rf frontend/build
+            tar -xzf ~/frontend-build.tar.gz -C ./frontend
+            rm ~/frontend-build.tar.gz
+          fi
+
+          # Обновляем backend (если были изменения)
+          if [ -f ~/backend-build.tar.gz ]; then
+            rm -rf backend_strapi
+            tar -xzf ~/backend-build.tar.gz -C ./backend_strapi
+            rm ~/backend-build.tar.gz
+          fi
+
+          # Перезапускаем процессы через PM2
+          pm2 restart 6 # Frontend
+          pm2 restart 5 # Backend
+
+    # 9. Передаем файлы на сервер
+    - name: Upload frontend build
+      uses: appleboy/scp-action@master
+      with:
+        source: ./frontend-build.tar.gz
+        target: ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/frontend-build.tar.gz
+        port: ${{ secrets.PORT }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+    - name: Upload backend build
+      if: env.no_changes == 'false'
+      uses: appleboy/scp-action@master
+      with:
+        source: ./backend-build.tar.gz
+        target: ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/backend-build.tar.gz
+        port: ${{ secrets.PORT }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
