--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
+  
     paths:
       - 'backend_strapi/**'
       - 'frontend/**'
+  workflow_dispatch:
 
 jobs:
   deploy:
