--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  
     paths:
       - 'backend_strapi/**'
       - 'frontend/**'
@@ -22,9 +23,9 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: ' v22.12.0' # Актуальная версия Node.js
+        node-version: '22.12.0' # Используем актуальную LTS-версию Node.js
 
-    # 3. Установка зависимостей и сборка фронтенда
+    # 3. Установка зависимостей и сборка frontend
     - name: Install frontend dependencies
       run: npm install
       working-directory: ./frontend
@@ -33,7 +34,8 @@ jobs:
       run: npm run build
       working-directory: ./frontend
 
-    # 4. Проверка изменений в бэкенде
+   
+    # 5. Проверка изменений в backend (если требуется оставить)
     - name: Check for backend changes
       id: backend_changes
       run: |
@@ -43,7 +45,7 @@ jobs:
           echo "no_changes=false" >> $GITHUB_ENV
         fi
 
-    # 5. Установка зависимостей и сборка бэкенда
+    # 6. Установка зависимостей и сборка backend
     - name: Install backend dependencies and build
       if: env.no_changes == 'false'
       run: |
@@ -51,24 +53,10 @@ jobs:
         npm run build
       working-directory: ./backend_strapi
 
-    # 6. Передаём файлы фронтенда на сервер
-    - name: Upload frontend build to server
-      uses: appleboy/scp-action@master
-      with:
-        source: ./frontend/build/
-        target: ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/pluginexpert/frontend/build/
-        port: ${{ secrets.PORT }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-    # 7. Передаём файлы бэкенда на сервер
-    - name: Upload backend to server
+    # 7. Архивируем backend для передачи на сервер
+    - name: Archive backend build
       if: env.no_changes == 'false'
-      uses: appleboy/scp-action@master
-      with:
-        source: ./backend_strapi/
-        target: ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/pluginexpert/backend_strapi/
-        port: ${{ secrets.PORT }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
+      run: tar -czf backend-build.tar.gz -C ./backend_strapi .
 
     # 8. Деплой на сервер
     - name: Deploy to server
@@ -79,32 +67,41 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: ${{ secrets.PORT }}
         script: |
-          # Убедимся, что Node.js установлен на сервере
-          if ! [ -x "$(command -v node)" ]; then
-            echo "Node.js не найден, устанавливаю..."
-            curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
-            sudo apt-get install -y nodejs
-          fi
-
           # Переходим в директорию проекта
-          cd ~/pluginexpert
+          cd pluginexpert
 
-          # Убедимся, что директория фронтенда существует
-          if [ -d ./frontend/build ]; then
-            echo "Frontend build files uploaded successfully."
-          else
-            echo "Error: Frontend build files are missing."
-            exit 1
+          # Распаковываем frontend
+          if [ -f ~/frontend-build.tar.gz ]; then
+            rm -rf frontend/build
+            tar -xzf ~/frontend-build.tar.gz -C ./frontend
+            rm ~/frontend-build.tar.gz
           fi
 
-          # Обновляем бэкенд (если были изменения)
-          if [ -d ./backend_strapi ]; then
-            echo "Backend files uploaded successfully."
-          else
-            echo "Error: Backend files are missing."
-            exit 1
+          # Обновляем backend (если были изменения)
+          if [ -f ~/backend-build.tar.gz ]; then
+            rm -rf backend_strapi
+            tar -xzf ~/backend-build.tar.gz -C ./backend_strapi
+            rm ~/backend-build.tar.gz
           fi
 
-          # Перезапуск процессов через PM2
+          # Перезапускаем процессы через PM2
           pm2 restart 6 # Frontend
           pm2 restart 5 # Backend
+
+    # 9. Передаем файлы на сервер
+    - name: Upload frontend build
+      uses: appleboy/scp-action@master
+      with:
+        source: ./frontend-build.tar.gz
+        target: ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/frontend-build.tar.gz
+        port: ${{ secrets.PORT }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+    - name: Upload backend build
+      if: env.no_changes == 'false'
+      uses: appleboy/scp-action@master
+      with:
+        source: ./backend-build.tar.gz
+        target: ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/backend-build.tar.gz
+        port: ${{ secrets.PORT }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
