--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-  
     paths:
       - 'backend_strapi/**'
       - 'frontend/**'
@@ -23,7 +22,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '22.12.0' # Используем актуальную LTS-версию Node.js
+        node-version: '22.12.0' # Указываем требуемую версию Node.js
 
     # 3. Установка зависимостей и сборка frontend
     - name: Install frontend dependencies
@@ -34,8 +33,7 @@ jobs:
       run: npm run build
       working-directory: ./frontend
 
-   
-    # 5. Проверка изменений в backend (если требуется оставить)
+    # 4. Проверка изменений в backend
     - name: Check for backend changes
       id: backend_changes
       run: |
@@ -45,7 +43,7 @@ jobs:
           echo "no_changes=false" >> $GITHUB_ENV
         fi
 
-    # 6. Установка зависимостей и сборка backend
+    # 5. Установка зависимостей и сборка backend
     - name: Install backend dependencies and build
       if: env.no_changes == 'false'
       run: |
@@ -53,44 +51,12 @@ jobs:
         npm run build
       working-directory: ./backend_strapi
 
-    # 7. Архивируем backend для передачи на сервер
+    # 6. Архивируем backend для передачи на сервер
     - name: Archive backend build
       if: env.no_changes == 'false'
       run: tar -czf backend-build.tar.gz -C ./backend_strapi .
 
-    # 8. Деплой на сервер
-    - name: Deploy to server
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        port: ${{ secrets.PORT }}
-        script: |
-         script: |
-  export NVM_DIR="$HOME/.nvm"
-  [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # Загружаем nvm
-  nvm use 22.12.0 # Активируем нужную версию Node.js
-  cd pluginexpert
-
-  # Распаковываем frontend
-  if [ -f ~/frontend-build.tar.gz ]; then
-    rm -rf frontend/build
-    tar -xzf ~/frontend-build.tar.gz -C ./frontend
-    rm ~/frontend-build.tar.gz
-  fi
-
-  # Обновляем backend (если были изменения)
-  if [ -f ~/backend-build.tar.gz ]; then
-    rm -rf backend_strapi
-    tar -xzf ~/backend-build.tar.gz -C ./backend_strapi
-    rm ~/backend-build.tar.gz
-  fi
-
-  # Перезапускаем процессы через PM2
-  pm2 restart 6 # Frontend
-  pm2 restart 5 # Backend
-    # 9. Передаем файлы на сервер
+    # 7. Передача файлов на сервер
     - name: Upload frontend build
       uses: appleboy/scp-action@master
       with:
@@ -107,3 +73,37 @@ jobs:
         target: ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/backend-build.tar.gz
         port: ${{ secrets.PORT }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+    # 8. Деплой на сервер
+    - name: Deploy to server
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: ${{ secrets.PORT }}
+        script: |
+          export NVM_DIR="$HOME/.nvm"
+          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # Загружаем nvm
+          nvm use 22.12.0 # Активируем нужную версию Node.js
+
+          # Переходим в директорию проекта
+          cd pluginexpert
+
+          # Распаковываем frontend
+          if [ -f ~/frontend-build.tar.gz ]; then
+            rm -rf frontend/build
+            tar -xzf ~/frontend-build.tar.gz -C ./frontend
+            rm ~/frontend-build.tar.gz
+          fi
+
+          # Обновляем backend (если были изменения)
+          if [ -f ~/backend-build.tar.gz ]; then
+            rm -rf backend_strapi
+            tar -xzf ~/backend-build.tar.gz -C ./backend_strapi
+            rm ~/backend-build.tar.gz
+          fi
+
+          # Перезапускаем процессы через PM2
+          pm2 restart 6 # Frontend
+          pm2 restart 5 # Backend
