--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,11 @@ jobs:
       run: tar -czf backend-build.tar.gz -C ./backend_strapi .
 
     # 7. Передача файлов на сервер
+    - name: Debug Secrets
+      run: |
+       echo "HOST: ${{ secrets.HOST }}"
+       echo "USERNAME: ${{ secrets.USERNAME }}"
+       echo "PORT: ${{ secrets.PORT }}"
     - name: Upload frontend build
       uses: appleboy/scp-action@master
       with:
