--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,6 +69,9 @@ jobs:
         target: ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/frontend-build.tar.gz
         port: ${{ secrets.PORT }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
+        script: |
+         echo "Using host: ${{ secrets.HOST }}"
+         echo "Using port: ${{ secrets.PORT }}"
 
     - name: Upload backend build
       if: env.no_changes == 'false'
