--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
       uses: appleboy/scp-action@master
       with:
         source: ./frontend-build.tar.gz
-        target: ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/frontend-build.tar.gz
+        target: "${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/frontend-build.tar.gz"
         port: ${{ secrets.PORT }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
@@ -78,7 +78,7 @@ jobs:
       uses: appleboy/scp-action@master
       with:
         source: ./backend-build.tar.gz
-        target: ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/backend-build.tar.gz
+        target: "${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/backend-build.tar.gz"
         port: ${{ secrets.PORT }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
 
