--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
 
     # 5. Передача файлов на сервер
     - name: Upload frontend build
-      uses: appleboy/scp-action@master
+      uses: appleboy/scp-action@0.0.7
       with:
         source: ./frontend-build.tar.gz
         target: "${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/frontend-build.tar.gz"
@@ -47,7 +47,7 @@ jobs:
 
     # 6. Деплой на сервер
     - name: Deploy to server
-      uses: appleboy/ssh-action@master
+      uses: appleboy/ssh-action@v0.0.7
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
