--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@strapi/blocks-react-renderer": "^1.0.1",
     "framer-motion": "^11.11.9",
+    "lucide-react": "^0.475.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-scroll": "^1.9.0"
