--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,10 @@
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.5.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-quill": "^2.0.0",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
