--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@strapi/blocks-react-renderer": "^1.0.1",
+    "browser-image-compression": "^2.0.2",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.475.0",
     "next": "^15.0.1",
