--- a/backend_strapi/.env.example
+++ b/backend_strapi/.env.example
@@ -5,3 +5,22 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
+
+# Database: postgres (remote server) or sqlite (local, no server needed)
+DATABASE_CLIENT=postgres
+
+# Option A: connection string (overrides host/port/database/user/password if set)
+# DATABASE_URL=postgres://USER:PASSWORD@HOST:5432/DATABASE_NAME?sslmode=require
+
+# Option B: separate vars for remote PostgreSQL server
+DATABASE_HOST=your-server.example.com
+DATABASE_PORT=5432
+DATABASE_NAME=strapi
+DATABASE_USERNAME=strapi
+DATABASE_PASSWORD=your_password
+DATABASE_SSL=false
+DATABASE_SCHEMA=public
+
+# For SQLite (local only): set DATABASE_CLIENT=sqlite and uncomment:
+# DATABASE_CLIENT=sqlite
+# DATABASE_FILENAME=.tmp/data.db
