--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,5 +29,8 @@
     "husky": "^9.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
+  },
+  "overrides": {
+    "strip-ansi": "^7.1.2"
   }
 }
